[IMP] base_vat: VIES validation on Fiscal Position
At present the user can select an option in the settings to check VAT
numbers against the VIES system. If the VAT number fails this
validation the result is a non-blocking banner message that informs the
user that the VIES validation has failed, but has no further
ramifications (the user can still use an unrecognised VAT number).

This non-blocking functionality is still desirable, however we wish to
determine the validity of certain fiscal positions based on whether the
VIES VAT check is valid.

In order to acheive this, the computed boolean `vies_valid` field is
added, and populated based on the results when comparing the VAT against
the VIES system. It depends on the `vat` and `country_id` of the
partner. If it looks like the VIES check needs to be performed on this
vat and if any company in the db requires a VIES vat check, the check is
performed, and if none do, then check is not performed. The field can be
manually edited, but is also tracked.

Provided we know whether a partner has a valid VIES vat or not, it is
only important sometimes in trying to find the appropriate fiscal
position (because VIES is only confirms validity of a VAT number for
intra-community trade). Because of this, a computed boolean field
called `perform_vies_validation` is added to represent this on the
partner. For example if a partner is from the same country as the
current company, then it doesn't matter that it's VIES valid or not, all
that matters is that there is some string in its vat field for the "VAT
Required" to be satsified, so the `perform_vies_validation` field would
be False. This field is also used to determine whether the `vies_valid`
checkbox should be shown or hidden on the partner form view.

A hook called _get_vat_valid is placed in the method on fiscal position
that retrieves the appropriate fiscal position for a given account move,
and it is overridden by a function in base_vat, which specifies whether
the partner/

--- a/addons/base_vat/views/res_partner_views.xml
+++ b/addons/base_vat/views/res_partner_views.xml
@@ -6,9 +6,16 @@
             <field name="name">view.partner.base.vat.form</field>
             <field name="inherit_id" ref="base.view_partner_form" />
             <field name="arch" type="xml">
-                <xpath expr="//div[hasclass('alert')]" position="after">
-                    <div class="alert alert-warning oe_edit_only" role="alert" attrs="{'invisible': [('vies_failed_message', '=', False)]}">
-                        <field name="vies_failed_message" nolabel="1" readonly="1"/>
+                <xpath expr="//field[@name='vat']" position="replace">
+                    <field name="perform_vies_validation" invisible="1"/>
+                    <label for="vat" string="Tax ID"/>
+                    <div attrs="{'invisible': [('perform_vies_validation', '=', False)]}">
+                        <field name="vat" placeholder="e.g. BE0477472701" class="oe_inline" attrs="{'readonly': [('parent_id', '!=', False)]}"/>
+                        <label for="vies_valid"/>
+                        <field name="vies_valid" attrs="{'readonly': [('parent_id', '!=', False)]}"/>
+                    </div>
+                    <div attrs="{'invisible': [('perform_vies_validation', '=', True)]}">
+                        <field name="vat" placeholder="e.g. BE0477472701" attrs="{'readonly': [('parent_id','!=', False)]}"/>
                     </div>
                 </xpath>
             </field>
