--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -256,7 +256,7 @@
                 </div>
 
                 <div class="form-group field-login">
-                    <label for="login" class="control-label">Login Portal</label>
+                    <label for="login" class="control-label">Personal-Nummer</label>
                     <input type="text" name="login" t-att-value="login" id="login" class="form-control" required="required" autofocus="autofocus" autocapitalize="off"/>
                 </div>
 
