[FIX] web: reintroduce `.bg-transparent` class
== ISSUE ==

With the refactoring of the `utilities_custom.scss` file, we moved our
custom `bg-*` classes to the `bootstrap_review_backend.scss` file.

While doing this, the `bg-transparent` class actually disappeared.
This commit aims to reintroduce the class in the backend.

== After this commit ==

We reintroduce the `.bg-transparent` class inside
the `bootstrap_review_backend` file. We adopt the default Bootstrap
behavior for `background` classes and use a CSS variable to handle the
opacity.

task-3326297
part of task-3326263

closes odoo/odoo#121390

Signed-off-by: Pierre Paridans (app) <app@odoo.com>

--- a/addons/web/static/src/scss/bootstrap_review_backend.scss
+++ b/addons/web/static/src/scss/bootstrap_review_backend.scss
@@ -171,6 +171,11 @@ $-o-theme-text-colors: null;
     @extend %-bg-black;
 }
 
+.bg-transparent{
+    --bg-opacity: 0;
+    @extend %-bg-black;
+}
+
 // 2. Generate legacy opacity-variations classes for both white and black. We
 //    don't specifically assign colors here, we just extend placeholder
 //    selectors. To control opacity we act on the '--X-opacity' Bootstrap
