--- a/addons/account/wizard/account_automatic_entry_wizard_views.xml
+++ b/addons/account/wizard/account_automatic_entry_wizard_views.xml
@@ -15,6 +15,9 @@
                         The selected destination account is set to use a specific currency. Every entry transferred to it will be converted into this currency, causing
                         the loss of any pre-existing foreign currency amount.
                     </div>
+                    <div attrs="{'invisible': [('lock_date_message', '=', False)]}" class="alert alert-warning text-center" role="status">
+                        <field name="lock_date_message" nolabel="1"/>
+                    </div>
                     <group>
                         <group attrs="{'invisible': [('action', '!=', 'change_period')]}">
                             <field name="date" string="Recognition Date"/>
